css/index.css
@font-face {
  font-family: 'Latodaniel';
  src: local("Lato-Regular"), local("Lato Regular");
  src: url("../fonts/lato-regular.woff2") format("woff2");
  src: url("../fonts/lato-regular.woff") format("woff");
  font-weight: 400; }

@font-face {
  font-family: 'Latodaniel';
  src: local("Lato-Bold"), local("Lato Bold");
  src: url("../fonts/lato-bold.woff2");
  src: url("../fonts/lato-bold.woff");
  font-weight: 700; }

body {
  font-family: 'Latodaniel', Arial, Helvetica, sans-serif;
  margin-inline-start: 2rem;
  margin-inline-end: 2rem;
  margin: auto;
  line-height: 1.6;
  text-align: center;
  font-size: 18px; }

section {
  padding: 2rem; }

ul {
  list-style: none;
  margin: 0;
  padding: 0; }

h2 {
  font-size: 32px;
  color: #333333; }

h3 {
  margin: 0;
  padding-block-start: 2rem;
  padding-block-end: 2rem; }

a {
  text-decoration: none; }

@media (min-width: 1114px) {
  body {
    margin: auto; } }

.masthead {
  display: flex;
  background-color: #F4F6F9; }

.masthead__section {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: auto;
  padding-block-start: 2rem;
  padding-block-end: 2rem;
  padding-inline-start: 2rem;
  padding-inline-end: 2rem; }

img[alt="phones"] {
  display: none; }

.masthead__section--header {
  color: #333333;
  text-align: center; }

.masthead__section--paragraph {
  color: #4F4F4F;
  font-weight: 400;
  text-align: center; }

.masthead__section--list {
  padding: 0;
  display: flex; }

@media (min-width: 1114px) {
  .masthead {
    background-image: url("../img/bg_header.png");
    background-position: calc(50vw - 11px) 100%;
    background-repeat: no-repeat;
    padding-block-start: 4rem;
    padding-block-end: 4rem; }
  .masthead__container {
    margin-inline-end: auto;
    max-width: 1114px; }
  .masthead__section {
    align-items: self-start;
    max-width: 547px; }
  .masthead__section--header {
    font-size: 36px;
    text-align: start; }
  .masthead__section--paragraph {
    font-size: 18px;
    font-weight: 400;
    text-align: start; }
  .masthead__section--list {
    padding: 0;
    display: flex; }
  .masthead__section--list,
  .masthead__section--header {
    padding-block-start: 2rem;
    padding-block-end: 2rem; }
  img[alt="phones"] {
    display: block; } }

.masthead__section--link-homepage_logo {
  width: 186px;
  height: 70px; }

.google-play_logo,
.app-store_logo {
  width: 145.69px;
  height: 44px;
  padding-inline-start: 1rem;
  padding-inline-end: 1rem; }

.feature_article__list-item-notification {
  position: relative; }

.notifications {
  background-image: url("../img/icon_bell_ringing_blue.svg"); }

.all-videos {
  background-image: url("../img/icon_video_blue.svg"); }

.new-videos {
  background-image: url("../img/icon_hd_blue.svg"); }

.pages {
  background-image: url("../img/icon_flag_blue.svg"); }

.pictures {
  background-image: url("../img/icon_tent_blue.svg"); }

.update-leagues {
  background-image: url("../img/icon_graph_blue.svg"); }

.notifications,
.all-videos,
.new-videos,
.pages,
.pictures,
.update-leagues {
  background-position: 50% 0;
  background-size: 2.5rem;
  background-repeat: no-repeat; }

.sport-tv_icon {
  background-image: url("../img/logo_sports_tv.svg");
  width: 149px;
  height: 52px; }

.sports-black_icon {
  grid-row: 1;
  grid-column: 2;
  background-image: url("../img/logo_sports_channel.svg");
  width: 102px;
  height: 32px; }

.nbc-sports_icon {
  background-image: url("../img/logo_nbc_sports.svg");
  width: 69px;
  height: 58px; }

.designer-technology_icon {
  background-image: url("../img/logo_designer_technology.svg");
  width: 110px;
  height: 32px; }

.logo_designer_new_icon {
  background-image: url("../img/logo_designer_news.svg");
  width: 48px;
  height: 48px; }

.sky-sports_icon {
  background-image: url("../img/logo_sky_sports.svg");
  width: 210px;
  height: 34px; }

.sport-tv_icon,
.sports-black_icon,
.nbc-sports_icon,
.designer-technology_icon,
.logo_designer_new_icon,
.sky-sports_icon {
  background-size: contain;
  background-repeat: no-repeat;
  display: block;
  text-indent: -9999px; }

@media (min-width: 1114px) {
  .masthead__section--link-homepage_logo {
    width: 92px;
    height: 32px; }
  .google-play_logo,
  .app-store_logo {
    width: 156.05px;
    height: 47px; }
  .google-play_logo {
    padding-inline-start: 1rem;
    padding-inline-end: 0; }
  .app-store_logo {
    padding-inline-start: 0; } }

.section_more-information {
  background-color: #FFFFFF;
  text-align: center;
  padding-block-start: 2rem;
  padding-block-end: 2rem;
  background-image: url("../img/bg_friendly_user_interface.png");
  background-repeat: no-repeat;
  background-position: 50% 20%;
  min-height: 1100px; }

.section_more-information a {
  color: #00ADEE; }

.section_more-information--heading {
  text-transform: uppercase; }

.more-information__link {
  font-weight: 700; }

.phone-image {
  max-width: 100%; }

.section_feature {
  background-color: #F4F6F9;
  padding-block-start: 2rem;
  padding-block-end: 2rem; }

.feature_article_heading {
  color: #333333; }

.feature_article__list-item {
  margin: 0;
  padding-block-start: 3rem;
  padding-block-end: 2rem; }

.feature_article__list-item a {
  color: #4F4F4F; }

.section__feature-partenaire {
  background-color: #F4F6F9;
  margin: 0;
  padding-block-start: 2rem;
  padding-block-end: 2rem; }

.feature-partenaire__list ul {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding-block-start: 1rem;
  padding-block-end: 1rem; }

footer {
  background-color: #00ADEE;
  margin: 0;
  padding: 2rem; }

.a11y_link {
  color: #FFFFFF; }

.social-media_list,
.a11y_list {
  display: flex; }

.social-media_list > li,
.a11y_list > li {
  padding: 0.5rem; }

.sports-logo {
  margin: 0; }

footer .sports-logo_icon {
  background-image: url("../img/logo_sports_white.svg"); }

footer .sports-logo_icon,
.icon_twitter,
.icon_facebook,
.icon_instagram {
  background-repeat: no-repeat;
  display: block;
  text-indent: -9999px; }

.icon_twitter,
.icon_facebook,
.icon_instagram {
  width: 2rem;
  height: 2rem; }

.icon_twitter {
  background-image: url("../img/icon_twitter.svg"); }

.icon_facebook {
  background-image: url("../img/icon_facebook.svg"); }

.icon_instagram {
  background-image: url("../img/icon_instagram.svg"); }

